--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,9 +28,12 @@ $bodoni                     : "Bodoni MT", serif;
 $calisto                    : "Calisto MT", serif;
 $garamond                   : Garamond, serif;
 
-$global-font-family         : $sans-serif;
-$header-font-family         : $sans-serif;
-$caption-font-family        : $serif;
+// $global-font-family         : $sans-serif;
+$global-font-family         : $helvetica;
+// $header-font-family         : $sans-serif;
+$header-font-family         : $helvetica;
+// $caption-font-family        : $serif;
+$caption-font-family        : $helvetica;
 
 /* type scale */
 $type-size-1                : 2.441em;  // ~39.056px
@@ -54,6 +57,7 @@ $sidebar-link-max-width     : 250px;
 /*
    Colors
    ========================================================================== */
+$STAR_color                   : #942c37;
 
 $gray                       : #7a8288;
 $dark-gray                  : mix(#000, $gray, 40%);
@@ -61,12 +65,19 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #fff;
+// $body-color                 : #fff;
+// $background-color           : #fff;
+// $code-background-color      : #fafafa;
+// $code-background-color-dark : $light-gray;
+// $text-color                 : $dark-gray;
+// $border-color               : $lighter-gray;
+
+$body-color                 : $light-gray;
 $background-color           : #fff;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
 $text-color                 : $dark-gray;
-$border-color               : $lighter-gray;
+$border-color               : $STAR_color;
 
 $primary-color              : #7a8288;
 $success-color              : #62c462;
