Main pages created and filled in

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,8 +12,13 @@ body {
   padding: $masthead-height 0 0;
   padding-bottom: 9em;
   color: $text-color;
+  // color: $STAR_color;
   font-family: $global-font-family;
+  // font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  // line-height: 1.5;
   line-height: 1.5;
+  font-size: 0.9em; // controls the font size of the body text anywhere in the site
+
 
   &.overflow--hidden {
     /* when primary navigation is visible, the content in the background won't scroll */
@@ -50,7 +55,8 @@ h5 {
 }
 
 h6 {
-  font-size: $type-size-6;
+  // font-size: $type-size-6;
+  font-size: $type-size-8;
 }
 
 small, .small {
@@ -65,6 +71,7 @@ u,
 ins {
   text-decoration: none;
   border-bottom: 1px solid $text-color;
+  // border-bottom: 1px solid $STAR_color;
   a {
     color: inherit;
   }
@@ -98,6 +105,7 @@ blockquote {
   padding-right: 1em;
   font-style: italic;
   border-left: 0.25em solid $primary-color;
+  // border-left: 0.25em solid $STAR_color;
 
   cite {
     font-style: italic;
