--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -164,6 +164,13 @@ body:hover .visually-hidden button {
   margin-right: auto;
 }
 
+.align-center-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+}
+
 /* file page content container */
 
 .full {
